--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Big+Shoulders:opsz,wght@10..72,100..900&family=Lilita+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playwrite+AU+SA:wght@100..400&family=Playwrite+RO:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rowdies:wght@300;400;700&family=Special+Gothic+Condensed+One&display=swap');
 @import "tailwindcss";
 
+
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+@custom-variant dark (&:where(.dark, .dark *));
+
 /* fonts */
 /* font-family: "Open Sans", sans-serif; */
 /* font-family: "Roboto", sans-serif; */
 /* font-family: "Arvo", serif; */
 /* font-family: "Poppins", sans-serif; */
+.dark {
+  filter: invert(1) hue-rotate(180deg);
+}
 
+.dark img, .dark video {
+  filter: invert(1) hue-rotate(180deg); /* reinvert media */
+}
+.dark text, .dark input, .dark select, .dark button, .dark pre {
+  filter: invert(1) hue-rotate(180deg);
+}
+
+.dark input::placeholder, .dark textarea::placeholder {
+  filter: invert(1) hue-rotate(180deg);
+  opacity: 0.7;
+}
 :root {
   /* Custom color palette */
   --primary-dark: #005acd;
